--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Sample project for Clean Architecture for Unity",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "@umm/unirx": "^1.0.0"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
